--- a/index.html
+++ b/index.html
@@ -4,42 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Accueil</title>
-		<link rel="stylesheet" href="index.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-		<script
-			src="https://kit.fontawesome.com/84cf682a85.js"
-			crossorigin="anonymous"></script>
-
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-			crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<header>
-			<nav class="navbar navbar-expand-lg">
-				<div class="container">
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a href="index.html" class="nav-link active">Accueil</a>
-							</li>
-							<li class="nav-item">
-								<a href="apropos.html" class="nav-link">A propos</a>
-							</li>
-							<li class="nav-item">
-								<a href="realisation.html" class="nav-link">Réalisations</a>
-							</li>
-							<li class="nav-item">
-								<a href="contact.html" class="nav-link">Contact</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</header>
 		<main class="container d-flex flex-column">
 			<h1>Bienvenue</h1>
 			<section class="introduction">
@@ -50,106 +16,7 @@
 					aliquid animi nisi?
 				</p>
 			</section>
-			<section class="parcours">
-				<article>
-					<h2>Mon parcours</h2>
-					<ul class="m-5">
-						<li>
-							<span>Formation Concepteur Développeur d'Applications</span>
-						</li>
-						<li><span>Formation Développeur Java</span></li>
-						<li>
-							<span>Licence Informatique - Université Clermont Auvergne</span>
-						</li>
-						<li>
-							<span
-								>Diplôme Universitaire de Technologie en Informatique - IUT 3
-								Université Paul Sabatier</span
-							>
-						</li>
-					</ul>
-				</article>
-				<article>
-					<h2>Mes compétences</h2>
-					<ul class="m-5">
-						<li><span>Conception et développement d'application web</span></li>
-						<li><span>Gestion de bases de données</span></li>
-						<li><span></span></li>
-						<li><span></span></li>
-					</ul>
-				</article>
-			</section>
-			<section class="realisation">
-				<h2>Mes réalisations</h2>
-				<article class="row d-flex justify-content-between m-5">
-					<div class="card col-4 col-sm-6" style="width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">
-								Site de jeux vidéo - Formation Développeur Java
-							</h5>
-							<p class="card-text">
-								Site réalisé avec Java et Springboot en back-end et utilisation
-								des JSP pour le front-end
-							</p>
-						</div>
-                        <div class="card-footer">
-                            <a
-								href="https://github.com/Benjamin-Rivero/capEntreprise"
-								class="btn btn-primary"
-								>Github</a
-							>
-                        </div>
-					</div>
-					<div class="card col-4 col-sm-6" style="width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">Placeholder</h5>
-							<p class="card-text">
-								Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-								Molestiae similique voluptas impedit dolore eos, necessitatibus
-								voluptatum
-							</p>
-						</div>
-                        <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Github</a>
-                        </div>
-					</div>
-					<div class="card col-4 col-sm-6" style="width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">Placeholder</h5>
-							<p class="card-text">
-								Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-								Molestiae similique voluptas impedit dolore eos, necessitatibus
-								voluptatum
-							</p>
-							
-						</div>
-                        <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Github</a>
-                        </div>
-					</div>
-				</article>
-				<a href="realisation.html" class="btn btn-primary">Voir plus</a>
-			</section>
 		</main>
-		<footer
-			class="d-flex flex-row justify-content-between bg-secondary p-2 mt-5">
-			<div>
-				<p class="pt-3">© Benjamin Rivero - Tous droits réservés</p>
-			</div>
-			<div class="d-flex justify-content-between pt-1">
-				<a
-					class="footer-link"
-					href="https://github.com/Benjamin-Rivero"
-					target="_blank"
-					><i class="fa-brands fa-square-github fa-3x"></i
-				></a>
-				<a
-					class="footer-link"
-					href="https://www.linkedin.com/in/benjaminrivero/"
-					target="_blank"
-					><i class="fa-brands fa-linkedin fa-3x"></i
-				></a>
-			</div>
-		</footer>
+        <script src="loadHtml.js"></script>
 	</body>
 </html>
