--- a/apropos.html
+++ b/apropos.html
@@ -7,33 +7,35 @@
 	</head>
 	<body>
 		<main class="container">
-			<section>
+			<h1>A propos</h1>
+			<section id="passion" class="ms-4">
+				<h2>Mes passions</h2>
+				<ul class="m-5">
+					<li>Basketball : Pratique en amateur avec un niveau catastrophique</li>
+					<li>Manga / Anime</li>
+					<li>Jeux vidéos : JRPG </li>
+				</ul>
+			</section>
+			<section id="parcours" class="ms-4">
 				<h2>Mon parcours</h2>
-				<article>
+				<article class="ms-4">
 					<h3>Mes études</h3>
-					<p class="m-5">
-						Au lycée j'ai passé un Bac S Sciences de l'ingénieur spécialité
-						Informatique et Sciences du Numérique option européenne. Suite à ça
-						j'ai passé un DUT en informatique. Suite à une année de césure, j'ai
-						fait 2 années de licence informatique, deuxième année que je n'ai
-						pas terminé pour commencer mon parcours professionel, ne me sentant
-						plus à l'aise dans les études
-					</p>
+					<ul class="m-5">
+						<li>Licence Informatique (2ème année)</li>
+						<li>Diplôme Universitaire de Technologie en Informatique</li>
+						<li>Bac S Sciences de l'ingénieur spécialité Informatique et Sciences du Numérique option Européenne</li>
+					</ul>
 				</article>
-				<article>
+				<article class="ms-4">
 					<h3>Mes formations</h3>
-					<p class="m-5">
-						Après mes études je me suis autoformer sur Java pour acquérir un
-						meilleur niveau, grâce à ça j'ai pu commencé à voir des technologies
-						comme Spring. J'ai ensuite intégrer une formation de développeur
-						Java pour consolider mes compétences et aussi acquérir certains
-						savoirs professionels que je n'avais pas acquis lors de mon autoformation.
-                        Et actuellement je suis dans une formation de Concepteur Développeur d'Applications.
-					</p>
+					<ul class="m-5">
+						<li>Titre Professionel de Concepteur Développeur d'Applications</li>
+						<li>POEC Développeur Java</li>
+					</ul>
 				</article>
 				<article></article>
 			</section>
-			<section>
+			<section id="competences" class="ms-4">
 				<h2>Mes compétences</h2>
 				<ul class="m-5">
 					<li>
@@ -75,7 +77,7 @@
 					</li>
 				</ul>
 			</section>
-			<section>
+			<section id="softskills" class="ms-4">
 				<h2>Mes Soft Skills</h2>
 				<ul class="m-5">
 					<li>Indépendant</li>
