--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 	</head>
 	<body>
 		<main class="container d-flex flex-column">
-			<h1>Bienvenue</h1>
+			<h1>Benjamin Rivero</h1>
 			<section class="introduction">
 				<p class="p-5">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-					consequuntur expedita eum sint, maiores cupiditate dolore error
-					perferendis, distinctio ea recusandae illo rerum quis in amet sit
-					aliquid animi nisi?
+					Bienvenue sur mon portfolio, voila par contre j'ai aucune idée de quoi mettre d'autre sur cette page 
 				</p>
 			</section>
 		</main>
