--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
 <body>
     
     <main class="form-container">
+        <h1>Me contacter</h1>
         <form action="" method="POST">
             <label for="name">Nom</label>
             <input type="text" id="name" name="name" required>
