--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,16 @@
 <div class="d-flex flex-row justify-content-between">
     <p class="pt-3">© Benjamin Rivero - Tous droits réservés</p>
-    <a class="footer-link pt-3 ms-4" href="contact.html">Contact</a>
+    <a class="nav-link pt-3 ms-4" href="contact.html">Contact</a>
 </div>
 <div class="d-flex justify-content-between pt-1">
     <a
-        class="footer-link"
+        class="footer-github"
         href="https://github.com/Benjamin-Rivero"
         target="_blank"
         ><i class="fa-brands fa-square-github fa-3x"></i></a>
     <a
-        class="footer-link"
+        class="nav-link"
         href="https://www.linkedin.com/in/benjaminrivero/"
         target="_blank"
-        ><i class="fa-brands fa-linkedin fa-3x"></i></a>
+        ><i class="fa-brands fa-linkedin-in fa-3x"></i></a>
 </div>
