--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
         <div class="" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link active">Accueil</a>
+                    <a href="index.html" class="nav-link">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a href="apropos.html" class="nav-link">A propos</a>
