--- a/apropos.html
+++ b/apropos.html
@@ -9,11 +9,11 @@
 		<main class="container">
 			<h1>A propos</h1>
 			<section id="passion" class="ms-4">
-				<h2>Mes passions</h2>
+				<h2>Mes centres d'intérêt</h2>
 				<ul class="m-5">
 					<li>Basketball : Pratique en amateur avec un niveau catastrophique</li>
 					<li>Manga / Anime</li>
-					<li>Jeux vidéos : JRPG </li>
+					<li>Jeux vidéos</li>
 				</ul>
 			</section>
 			<section id="parcours" class="ms-4">
