--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<body>
 		<main class="container d-flex flex-column">
 			<h1>Benjamin Rivero</h1>
-			<section class="introduction">
+			<div class="introduction">
 				<p class="p-5">
 					Bienvenue sur mon portfolio, voila par contre j'ai aucune idée de quoi mettre d'autre sur cette page 
 				</p>
-			</section>
+			</div>
 		</main>
         <script src="loadHtml.js"></script>
 	</body>
