--- a/realisation.html
+++ b/realisation.html
@@ -8,9 +8,9 @@
 <body>
     <main class="container d-flex flex-column">
         <h1>Mes projets</h1>
-        <section class="row d-flex justify-content-between m-5" cards>
+        <div class="row d-flex justify-content-between m-5 cards">
 
-        </section>
+        </div>
     </main>
     <script src="loadHtml.js"></script>
 </body>
