--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     
     <main class="form-container">
         <h1>Me contacter</h1>
-        <form action="/post" method="POST">
+        <form action="mailto:benjiirivero@gmail.com" method="POST">
             <label for="name">Nom</label>
             <input type="text" id="name" name="name" placeholder="Nom" required>
     
